k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: print-cms-cluster-ip
spec:
  ports:
  - port: 3000
    targetPort: 80
  selector:
    app: print-cms
  type: ClusterIP
